--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ openai = "^1.64.0"
 torch = "^2.6.0"
 transformers = "^4.49.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pre-commit = "^3.2.0"
 flake8 = "^6.0.0"
 flake8-bugbear = "^23.3.23"
