--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,12 @@ authors = ["Grip on LLMs, City of Amsterdam"]
 packages = [{ include = "llm_eval" }]
 
 [tool.poetry.dependencies]
+azure-identity = "^1.20"
+azure-keyvault = "~4.1.0"
 python = "^3.9"
 accelerate = "^1.4.0"
+cryptography = "~43.0.3"
+numpy="^1.17"
 openai = "^1.64.0"
 torch = "^2.6.0"
 transformers = "^4.49.0"
