--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ azure-keyvault = "~4.1.0"
 python = "^3.9"
 accelerate = "^1.4.0"
 cryptography = "~43.0.3"
+dotenv = "^1.0.1"
 numpy="^1.17"
 openai = "^1.64.0"
 torch = "^2.6.0"
