--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ numpy="^1.17"
 openai = "^1.64.0"
 torch = "^2.6.0"
 transformers = "^4.49.0"
+codecarbon = "^2.8.3"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
