--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # Adapt to your needs. This version includes typical data files we work with, along with the default python template.
 
+# output / results
+results*
+output*
+
 # Text / html
 *.csv
 *.txt
