--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,8 @@ repos:
     rev: 5.12.0
     hooks:
     -   id: isort
+        args:
+          - "--profile=black"
   - repo: https://github.com/psf/black
     rev: 23.3.0
     hooks:
