added bert_score; fixed imports

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ torch = "^2.6.0"
 transformers = "^4.49.0"
 codecarbon = "^2.8.3"
 evaluate = "^0.4.3"
+bert_score = "^0.3.13"
 sacrebleu = "^2.5.1"
 sacremoses = "^0.1.1"
 nltk = "^3.9.1"
