--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ bert_score = "^0.3.13"
 sacrebleu = "^2.5.1"
 sacremoses = "^0.1.1"
 nltk = "^3.9.1"
+mmh3 = "5.1.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
