base simplification; xsum

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,10 @@ evaluate = "^0.4.3"
 bert_score = "^0.3.13"
 sacrebleu = "^2.5.1"
 sacremoses = "^0.1.1"
+rouge_score = "^0.1.2"
 nltk = "^3.9.1"
 mmh3 = "5.1.0"
+datasets = "^3.5.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
