added Dutch and English version

--- a/llm-eval-website/_config_dev.yml
+++ b/llm-eval-website/_config_dev.yml
@@ -1,5 +1,5 @@
 title: Grip op LLMs
-baseurl: "/grip-on-llms" # for project sites
-url: "https://Amsterdam.github.io"
+baseurl: "" # for project sites
+url: "http://127.0.0.1:4000"
 description: Om het verantwoord gebruik van LLM's te bevorderen, bieden wij een overzicht van modellen die ingezet kunnen worden voor Nederlandse gemeentelijke toepassingen.
 default_lang: nl
