--- a/llm-eval-website/_config.yml
+++ b/llm-eval-website/_config.yml
@@ -1,5 +1,11 @@
 title: Grip op LLMs
 baseurl: "/grip-on-llms" # for project sites
 url: "https://Amsterdam.github.io"
-description: Om het verantwoord gebruik van LLM's te bevorderen, bieden wij een overzicht van modellen die ingezet kunnen worden voor Nederlandse gemeentelijke toepassingen.
 default_lang: nl
+visible_columns:
+  - model
+  - provider
+  - costs
+  - reasoning
+  - inclusion
+  - energy_use
