--- a/llm-eval-website/_config_dev.yml
+++ b/llm-eval-website/_config_dev.yml
@@ -3,3 +3,10 @@ baseurl: "" # for project sites
 url: "http://127.0.0.1:4000"
 description: Om het verantwoord gebruik van LLM's te bevorderen, bieden wij een overzicht van modellen die ingezet kunnen worden voor Nederlandse gemeentelijke toepassingen.
 default_lang: nl
+visible_columns:
+  - model
+  - provider
+  - costs
+  - reasoning
+  - inclusion
+  - energy_use
