--- a/llm-eval-website/_data/translations_en.yml
+++ b/llm-eval-website/_data/translations_en.yml
@@ -1,12 +1,12 @@
 table_headers:
-  - Model
-  - Provider
-  - Costs
-  - Reasoning
-  - Inclusion
-  - Energy Use
-  - In Short
-  - Use Cases
+  model: Model
+  provider: Provider
+  costs: Costs
+  reasoning: Reasoning
+  inclusion: Inclusion
+  energy_use: Energy Use
+  in_short: In Short
+  use_cases: Use Cases
 page_title: LLM Overview
 mission: "To encourage the responsible use of Large Language Models, we create an overview of models, which can be used for Dutch municipal use cases."
 hover_energy_impossible: "Because this is a closed model, it is impossible to calculate how much energy it uses. If you would like to take care of the environment, we advise you to use a model for which this information is available."
