--- a/llm-eval-website/_data/translations_nl.yml
+++ b/llm-eval-website/_data/translations_nl.yml
@@ -1,12 +1,12 @@
 table_headers:
-  - Model
-  - Provider
-  - Kosten
-  - Redenering
-  - Inclusie
-  - Energiverbruik
-  - In het kort
-  - In de praktijk
+  model: Model
+  provider: Aanbieder
+  costs: Kosten
+  reasoning: Redenering
+  inclusion: Inclusie
+  energy_use: Energiverbruik
+  in_short: In het kort
+  use_cases: In de praktijk
 page_title: LLM Overzicht
 mission: "Om het verantwoord gebruik van LLM's te bevorderen, bieden wij een overzicht van modellen die ingezet kunnen worden voor Nederlandse gemeentelijke toepassingen."
 hover_energy_impossible: "Omdat dit model niet open-source is, is het onmogelijk om te berekenen hoeveel energie het verbruikt. Als je je zorgen maakt over ons milieu, raden we je aan een model te gebruiken waarvoor deze informatie beschikbaar is."
