update translations en

--- a/llm-eval-website/_data/translations_en.yml
+++ b/llm-eval-website/_data/translations_en.yml
@@ -4,6 +4,8 @@ table_headers:
   license: License
   costs: Costs
   reasoning: Reasoning
+  simplifcation: Simplification
+  summarization: Summarization
   inclusion: Inclusion
   energy_use: Energy Use
   in_short: In Short
