update translations nl

--- a/llm-eval-website/_data/translations_nl.yml
+++ b/llm-eval-website/_data/translations_nl.yml
@@ -4,6 +4,8 @@ table_headers:
   license: License
   costs: Kosten
   reasoning: Redenering
+  simplifcation: Vereenvoudiging
+  summarization: Samenvatting
   inclusion: Inclusie
   energy_use: Energiverbruik
   in_short: In het kort
