added aspect explanations; order by energy; fix closing; fix translations;

--- a/llm-eval-website/_config.yml
+++ b/llm-eval-website/_config.yml
@@ -7,7 +7,7 @@ visible_columns:
   - provider
   - license
   - costs
-  - reasoning
-  - simplifcation
-  - summarization
   - energy_use
+  - reasoning
+  - simplification
+  - summarization
