--- a/llm-eval-website/_config_dev.yml
+++ b/llm-eval-website/_config_dev.yml
@@ -8,6 +8,7 @@ visible_columns:
   - provider
   - license
   - costs
-  - reasoning
-  - inclusion
   - energy_use
+  - reasoning
+  - simplification
+  - summarization
